<resources>
    <string name="app_name">EventFinder</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register">SignUp</string>
    <string name="acc">Don\'t have an Account? </string>
    <string name="change_language">Change Language</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="google_maps_key" translatable="false">AIzaSyAkqiM4LB-s5zXdz4MEVXusUl-10Edvj6U</string>
</resources>